Setup GitHub Sponsors funding.

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "repository": "github:jaydenseric/class-name-prop",
   "homepage": "https://github.com/jaydenseric/class-name-prop#readme",
   "bugs": "https://github.com/jaydenseric/class-name-prop/issues",
+  "funding": "https://github.com/sponsors/jaydenseric",
   "keywords": [
     "react",
     "class",
