--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "eslint-plugin-jsdoc": "^19.0.0",
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-prettier": "^3.1.1",
-    "hard-rejection": "^2.1.0",
     "jsdoc-md": "^4.0.1",
     "prettier": "^1.18.2",
     "test-director": "^3.0.0"
@@ -50,7 +49,7 @@
     "test": "npm run test:eslint && npm run test:prettier && npm run test:api && npm run test:size",
     "test:eslint": "eslint .",
     "test:prettier": "prettier '**/*.{json,yml,md}' -l",
-    "test:api": "coverage-node -r hard-rejection/register test",
+    "test:api": "coverage-node test",
     "test:size": "size-limit",
     "prepublishOnly": "npm test"
   }
