--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   ],
   "main": "index.js",
   "engines": {
-    "node": ">=10"
+    "node": "^12.20 || >= 14.13"
   },
   "browserslist": "> 0.5%, not dead",
   "devDependencies": {
