--- a/package.json
+++ b/package.json
@@ -44,12 +44,11 @@
     "test-director": "^6.0.0"
   },
   "scripts": {
-    "prepare": "npm run prepare:jsdoc && npm run prepare:prettier",
-    "prepare:jsdoc": "jsdoc-md",
-    "prepare:prettier": "prettier readme.md --write",
-    "test": "npm run test:eslint && npm run test:prettier && npm run test:api && npm run test:size",
-    "test:eslint": "eslint .",
-    "test:prettier": "prettier '**/*.{json,yml,md}' -l",
+    "jsdoc": "jsdoc-md",
+    "test": "npm run test:eslint && npm run test:prettier && npm run test:jsdoc && npm run test:api && npm run test:size",
+    "test:eslint": "eslint --ext mjs,js .",
+    "test:prettier": "prettier -c .",
+    "test:jsdoc": "jsdoc-md -c",
     "test:api": "coverage-node test.mjs",
     "test:size": "size-limit",
     "prepublishOnly": "npm test"
