--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
   },
   "browserslist": "> 0.5%, not dead",
   "devDependencies": {
-    "@size-limit/preset-small-lib": "^4.10.2",
     "coverage-node": "^5.0.1",
+    "esbuild": "^0.11.17",
     "eslint": "^7.25.0",
     "eslint-config-env": "^19.0.2",
     "eslint-config-prettier": "^8.3.0",
@@ -38,19 +38,18 @@
     "eslint-plugin-jsdoc": "^33.0.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.4.0",
+    "gzip-size": "^6.0.0",
     "jsdoc-md": "^10.1.0",
     "prettier": "^2.2.1",
-    "size-limit": "^4.10.2",
     "test-director": "^6.0.0"
   },
   "scripts": {
     "jsdoc": "jsdoc-md",
-    "test": "npm run test:eslint && npm run test:prettier && npm run test:jsdoc && npm run test:api && npm run test:size",
+    "test": "npm run test:eslint && npm run test:prettier && npm run test:jsdoc && npm run test:api",
     "test:eslint": "eslint --ext mjs,js .",
     "test:prettier": "prettier -c .",
     "test:jsdoc": "jsdoc-md -c",
     "test:api": "coverage-node test.mjs",
-    "test:size": "size-limit",
     "prepublishOnly": "npm test"
   }
 }
