--- a/package.json
+++ b/package.json
@@ -28,19 +28,20 @@
   },
   "browserslist": "> 0.5%, not dead",
   "devDependencies": {
-    "@size-limit/preset-small-lib": "^2.2.4",
-    "coverage-node": "^2.0.2",
-    "eslint": "^6.5.1",
-    "eslint-config-env": "^13.0.1",
-    "eslint-config-prettier": "^6.9.0",
-    "eslint-plugin-compat": "^3.3.0",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jsdoc": "^19.0.0",
-    "eslint-plugin-node": "^11.0.0",
-    "eslint-plugin-prettier": "^3.1.1",
-    "jsdoc-md": "^4.0.1",
-    "prettier": "^1.18.2",
-    "test-director": "^3.0.0"
+    "@size-limit/preset-small-lib": "^4.10.2",
+    "coverage-node": "^5.0.1",
+    "eslint": "^7.25.0",
+    "eslint-config-env": "^19.0.2",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-compat": "^3.9.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsdoc": "^33.0.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "jsdoc-md": "^10.1.0",
+    "prettier": "^2.2.1",
+    "size-limit": "^4.10.2",
+    "test-director": "^6.0.0"
   },
   "scripts": {
     "prepare": "npm run prepare:jsdoc && npm run prepare:prettier",
@@ -49,7 +50,7 @@
     "test": "npm run test:eslint && npm run test:prettier && npm run test:api && npm run test:size",
     "test:eslint": "eslint .",
     "test:prettier": "prettier '**/*.{json,yml,md}' -l",
-    "test:api": "coverage-node test",
+    "test:api": "coverage-node test.mjs",
     "test:size": "size-limit",
     "prepublishOnly": "npm test"
   }
