--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "index.js"
   ],
   "sideEffects": false,
-  "main": "index.js",
+  "main": "./index.js",
   "exports": {
     ".": "./index.js",
     "./package": "./package.json",
