--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "main": "./classNameProp.mjs",
   "exports": {
     ".": "./classNameProp.mjs",
+    "./classNameProp.mjs": "./classNameProp.mjs",
     "./package.json": "./package.json"
   },
   "engines": {
