--- a/package.json
+++ b/package.json
@@ -34,15 +34,15 @@
   },
   "browserslist": "Node 14.17 - 15 and Node < 15, Node 16 - 17 and Node < 17, Node >= 18, > 0.5%, not OperaMini all, not dead",
   "devDependencies": {
-    "@types/node": "^17.0.17",
-    "coverage-node": "^6.0.1",
-    "esbuild": "^0.14.21",
-    "eslint": "^8.8.0",
+    "@types/node": "^18.7.9",
+    "coverage-node": "^8.0.0",
+    "esbuild": "^0.15.5",
+    "eslint": "^8.22.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "gzip-size": "^7.0.0",
-    "prettier": "^2.5.1",
-    "test-director": "^8.0.2",
-    "typescript": "^4.6.0-dev.20220210"
+    "prettier": "^2.7.1",
+    "test-director": "^10.0.0",
+    "typescript": "^4.7.4"
   },
   "scripts": {
     "eslint": "eslint .",
